[package]
name = "ql-api"
version = "0.1.0"
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
#byteorder = "1"
thiserror = "1"
#num-traits = "0.2"
#num-derive = "0.3"

