[package]
name = "ql-api"
version = "0.1.0"
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
futures = "0.3"

regex = "1"
thiserror = "1"
lazy_static = "1.4.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Websockets
tokio-tungstenite = "0.14.0"
http = "0.2.3"
